add font-size variables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,69 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap');
-
-@font-face {
-  font-family: "Century Gothic";
-  /*a name to be used later*/
-  src: url("../fonts/Century\ Gothic/GOTHIC.TTF");
-  /*URL to font*/
-  font-weight: normal;
-  font-display: "swap";
-}
-
-@font-face {
-  font-family: "Century Gothic";
-  /*a name to be used later*/
-  src: url("../fonts/Century\ Gothic/gothicb.ttf");
-  /*URL to font*/
-  font-weight: bold;
-  font-display: "swap";
-}
-
-@font-face {
-  font-family: "Century Gothic Italic";
-  /*a name to be used later*/
-  src: url("../fonts/Century\ Gothic/gothici.ttf");
-  /*URL to font*/
-  font-weight: bold;
-  font-style: italic;
-  font-display: "swap";
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap");
 
 :root {
   --dark-color: #000000;
   --primary-color: #007e3b;
   --secondary-color: #ecc30b;
 
-
-  --heading-font-family: "Century Gothic", Arial, Helvetica, sans-serif;
+  --heading-font-family: "Roboto", Helvetica, Arial, sans-serif;
   --body-font-family: "Roboto", Helvetica, Arial, sans-serif;
 
-  --h1-font-size: min(max(56px, 6.6667vw), 96px);
-  --h2-font-size: min(max(48px, 6.25vw), 90px);
+  --h1-font-size: min(max(27px, 2.969vw), 115px);
+  --h2-font-size: min(max(24px, 2.5vw), 96px);
+  --h3-font-size: min(max(20px, 1.875vw), 72px);
+
+  --big-text: min(max(12.5px, 1.25vw), 48px);
+  --body-text: min(max(10px, 0.9375vw), 36px);
+  --link-text: min(max(10px, 0.8333vw), 32px);
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html,body {
-margin: 0;
+html,
+body {
+  margin: 0;
   color: var(--dark-color);
   padding: 0;
 }
 
-body{
-    padding-top: 13vh ;
+body {
+  padding-top: 13vh;
 }
 
 .li {
 }
 
-button{
+button {
   border: none;
   cursor: pointer;
 }
 
-button:focus{
+button:focus {
   outline: none;
 }
 
@@ -72,24 +49,30 @@ a {
   color: inherit;
 }
 
-a:hover{
+a:hover {
   color: unset;
 }
 
-h1,h2,h3,h4,h5,h6,p{
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
-ul{
+ul {
   padding: 0;
-    list-style: none;
+  list-style: none;
 }
 
 .navbar {
-    background-color: white ;
-position: fixed;
-top:0;
-width: 100vw;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -110,7 +93,7 @@ width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 0.833vw;
+  font-size: var(--link-text);
 }
 
 .nav-item {
@@ -128,150 +111,139 @@ width: 100vw;
 }
 
 .dropbtn {
-    background-color: transparent;
-    border: none;
-    font-family: inherit;
-    font-size: inherit;
-    cursor: pointer;
-    outline: none;
-  }
+  background-color: transparent;
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  outline: none;
+}
 
 .navbar-dropdown {
-    position: relative;
+  position: relative;
 }
-  
+
 .dropdown-menu {
-    background: #C7C7C7;
-      padding: 0.5em 0;
-      min-width: 15ch;
-      position: absolute;
-      top: calc(100% - 0.25rem);
-      left: 50%;
-      transform: translateX(-50%);
-      transform: rotateX(-90deg) translateX(-50%);
-      transform-origin: top center;
-      opacity: 0.3;
-      transition: 280ms all ease-out;
-    }
-  
-    .dropdown-menu.show {
-        opacity: 1;
-        transform: rotateX(0) translateX(-50%);
-        visibility: visible;
-      } 
+  background: #c7c7c7;
+  padding: 0.5em 0;
+  min-width: 15ch;
+  position: absolute;
+  top: calc(100% - 0.25rem);
+  left: 50%;
+  transform: translateX(-50%);
+  transform: rotateX(-90deg) translateX(-50%);
+  transform-origin: top center;
+  opacity: 0.3;
+  transition: 280ms all ease-out;
+}
 
-      .dropdown-menu a {
-        display: block;
-        padding: 0.5em;
-      }
+.dropdown-menu.show {
+  opacity: 1;
+  transform: rotateX(0) translateX(-50%);
+  visibility: visible;
+}
 
+.dropdown-menu a {
+  display: block;
+  padding: 0.5em;
+}
 
+.form-row {
+  display: flex;
+}
 
-      .form-row {
-        display: flex;
-      }
-      
-      label {
-        font-family: var(--heading-font-family);
-        font-size: 1.25vw;
-        line-height: 1.16;
-        text-transform: uppercase;
-        display: block;
-      }
-      
-      .form-group {
-        flex: 1 1 0px;
-        margin-bottom: 4.722vh;
-      }
-      
-      .form-row > .form-group:first-of-type {
-        margin-right: 1.77vw;
-      }
-      .form-row > .form-group:last-of-type {
-        margin-left: 1.77vw;
-      }
-      
-      input[type=text],
-      input[type=password],
-      input[type=tel],
-      textarea,
-      select {
-        margin-top: 2.31vh;
-        width: 100%;
-        height: 7.5vh;
-        border: 2px solid #c4c4c4;
-        border-radius: 13px;
-        font: 400 1.25vw var(--heading-font-family);
-        padding: 1.67vh 1.875vw;
-        max-width: 32.86vw;
-      }
+label {
+  font-family: var(--heading-font-family);
+  font-size: 1.25vw;
+  line-height: 1.16;
+  text-transform: uppercase;
+  display: block;
+}
 
-      input:focus,
-      select:focus,
-      textarea:focus{
-        outline: none;
-      }
+.form-group {
+  flex: 1 1 0px;
+  margin-bottom: 4.722vh;
+}
 
-      select{
-        appearance: none;
-        background-image: url(../img/svg/select-arrow.svg); 
-        background-position: 95% 55%;
-        background-repeat: no-repeat ;
-        background-size: 5%;
-      }
+.form-row > .form-group:first-of-type {
+  margin-right: 1.77vw;
+}
+.form-row > .form-group:last-of-type {
+  margin-left: 1.77vw;
+}
 
+input[type="text"],
+input[type="password"],
+input[type="tel"],
+textarea,
+select {
+  margin-top: 2.31vh;
+  width: 100%;
+  height: 7.5vh;
+  border: 2px solid #c4c4c4;
+  border-radius: 13px;
+  font: 400 1.25vw var(--heading-font-family);
+  padding: 1.67vh 1.875vw;
+  max-width: 32.86vw;
+}
 
-      option{
-          background-color:#F4F4F4;
-      }      
-        
+input:focus,
+select:focus,
+textarea:focus {
+  outline: none;
+}
 
-      textarea {
-        height: unset;
-        max-width: unset;
-      }
-      
-      input[type="submit"] {
-        font-family: var(--heading-font-family);
-        line-height: 1.23;
-        color: #ffffff;
-        background: #007e3b;
-        border: none;
-        text-transform: uppercase;      
-      }
-      
-      
+select {
+  appearance: none;
+  background-image: url(../img/svg/select-arrow.svg);
+  background-position: 95% 55%;
+  background-repeat: no-repeat;
+  background-size: 5%;
+}
+
+option {
+  background-color: #f4f4f4;
+}
+
+textarea {
+  height: unset;
+  max-width: unset;
+}
+
+input[type="submit"] {
+  font-family: var(--heading-font-family);
+  line-height: 1.23;
+  color: #ffffff;
+  background: #007e3b;
+  border: none;
+  text-transform: uppercase;
+}
 
 .sr-only {
   position: absolute;
   height: 1px;
   width: 1px;
   /* IE 6 and 7 */
-  clip: rect(1px 1px 1px 1px); 
-  clip: rect(1px,1px,1px,1px);
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
   clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
   -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
   overflow: hidden !important;
-  }
+}
 
+.modal-header {
+  border: none;
+}
 
- .modal-header{
-   border: none;
- } 
-
- .modal-dialog{
+.modal-dialog {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
   align-items: center;
-  min-height: calc(100% - (.5rem * 2));
+  min-height: calc(100% - (0.5rem * 2));
   margin: auto;
 }
 
-.modal-content{
+.modal-content {
   margin: auto;
 }
-
-
-
-        
