--- a/assets/css/assistance.css
+++ b/assets/css/assistance.css
@@ -1,13 +1,13 @@
 @import url("./style.css");
 
-.assistance-main {
+.assistance-content {
   padding: 12vh 13vw;
 }
 
 .assistance-title {
   font-family: var(--heading-font-family);
   font-weight: bold;
-  font-size: 2.969vw;
+  font-size:var(--h1-font-size);
   line-height: 1.22;
   width: 47%;
   margin-bottom: 3.8vh;
@@ -16,69 +16,26 @@
 .assistance-small-title {
   margin-bottom: 7.4vh;
   font-family: var(--body-font-family);
-  font-size: 1.25vw;
+  font-size: var(--big-text);
 }
 
 .assistance-light-title {
   font-family: var(--heading-font-family);
   font-weight: normal;
-  font-size: 2.5vw;
+  font-size: var(--h2-font-size);
   line-height: 1.23;
   margin: 6.85vh 0 4.35vh 0;
 }
 
-.form-row {
-  display: flex;
-}
-
-label {
-  font-family: var(--heading-font-family);
-  font-size: 1.25vw;
-  line-height: 1.16;
-  text-transform: uppercase;
-  display: block;
-}
-
-.form-group {
-  flex: 1 1 0px;
-  margin-bottom: 4.722vh;
-}
-
-.form-row > .form-group:first-of-type {
-  margin-right: 1.77vw;
-}
-.form-row > .form-group:last-of-type {
-  margin-left: 1.77vw;
-}
-
-input[type=text],
-input[type=password],
-input[type=tel],
-textarea,
-select {
-  margin-top: 2.31vh;
-  width: 100%;
-  height: 7.5vh;
-  border: 2px solid #c4c4c4;
-  border-radius: 13px;
-  font: 400 1.25vw var(--heading-font-family);
-  padding: 1.67vh 1.875vw;
-  max-width: 32.86vw;
-}
-
-textarea {
-  height: unset;
-  max-width: unset;
-}
 
 #assistanceForm input[type="submit"] {
   font-weight: bold;
-  font-size: 2.5vw;
+  font-size: var(--big-text);
   padding: 1.85vh 6.72vw; 
   float: right;
   margin-top: 4vh;
   margin-bottom: 4vh;
-  border-radius: 0.7vw;
+  border-radius: 12px;
 }
 
 .modal-header .close{
@@ -180,9 +137,9 @@ margin: 5vh 0 4vh;
 
 #assistanceForm .control {
   font-family: var(--heading-font-family);
-  padding-left: 3.2vw;
+  padding-left: max(3.2vw, 45px);
   margin-bottom: 0.5vh;
-  font-size: 1.25vw;
+  font-size: var(--big-text);
   letter-spacing: 0.3px;
   font-weight: 400;
   color: #000000;
@@ -191,8 +148,10 @@ margin: 5vh 0 4vh;
 #assistanceForm .control__indicator {
   top: -0.4vw;
   left: 0;
-  height: 2.5vw;
   width: 2.5vw;
+  min-width: 30px;
+  height: 2.5vw;
+  min-height: 30px;
   border: 3px solid #c4c4c4;
   border-radius: 10px;
 }
@@ -215,9 +174,32 @@ margin: 5vh 0 4vh;
 
 .privacy-link {
   font-family: var(--heading-font-family);
-  font-size: 0.9375vw;
+  font-size: var(--body-text);
   line-height: 1.22;
   text-decoration: underline;
   color: #8C8C8C;
   margin: 1.2vh 6.25vw; 
+}
+
+
+
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {   
+  .assistance-content{
+    padding: 8vh 9.5vw;
+  }
+
+  .assistance-title{
+    width: 100%;
+    text-align: right;
+  }
+
+  #assistanceForm .control {
+    font-size: var(--body-text);
+}
+
+.privacy-link{
+  padding-left: max(3.2vw, 45px);
+}
+
 }
