--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ ul {
   padding: 3.24vh 4.79vw 4.167vh 6.6vw;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.13);
   font-family: var(--heading-font-family);
+  z-index: 500;
 }
 
 .navbar-brand {
@@ -91,7 +92,7 @@ ul {
 
 .nav-items {
   margin-left: auto;
-  font-size: 15.5px
+  font-size: var(--link-text)
 }
 
 .nav-item {
@@ -266,7 +267,7 @@ input[type="submit"] {
   
     --big-text: min(max(16px, 5.8vw), 24px);
     --body-text: min(max(10px, 3.14vw), 16px);
-    --link-text: min(max(10px, 0.8333vw), 32px);
+    --link-text: min(max(12px, 3.62vw), 16px);
   }
   
 
