--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,8 @@
   --h3-font-size: min(max(20px, 1.875vw), 72px);
 
   --big-text: min(max(18px, 1.25vw), 24px);
-  --body-text: min(max(10px, 0.9375vw), 36px);
-  --link-text: min(max(10px, 0.8333vw), 32px);
+  --body-text: min(max(14px, 0.9375vw), 36px);
+  --link-text: min(max(12px, 0.8333vw), 32px);
 }
 
 * {
@@ -185,8 +185,8 @@ select {
   height: 7.5vh;
   border: 2px solid #c4c4c4;
   border-radius: 13px;
-  font: 400 1.25vw var(--heading-font-family);
-  padding: 1.67vh 1.875vw;
+  font: 400 var(--big-text) var(--heading-font-family);
+  padding: max(1.67vh,10px) max(1.875vw, 24px);
   max-width: 32.86vw;
 }
 
@@ -220,18 +220,6 @@ input[type="submit"] {
   background: #007e3b;
   border: none;
   text-transform: uppercase;
-}
-
-.sr-only {
-  position: absolute;
-  height: 1px;
-  width: 1px;
-  /* IE 6 and 7 */
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
-  -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
-  overflow: hidden !important;
 }
 
 .modal-header {
@@ -321,10 +309,7 @@ input[type="text"], input[type="password"], input[type="tel"], textarea, select 
   margin-top: 1.31vh;
   width: 100%;
   height: 7.5vh;
-  border: 2px solid #c4c4c4;
-  border-radius: 13px;
-  font: 400 1.25vw var(--heading-font-family);
-  padding: 1.67vh 1.875vw;
+  border-radius: 13px;  font: 400 var(--body-text) var(--heading-font-family);
   max-width: unset;
 }
 
