--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -109,7 +109,7 @@
 .filter-title {
   font-family: var(--heading-font-family);
   font-weight: bold;
-  font-size: 0.9375vw;
+  font-size: var(--body-text);
   line-height: 1.2;
   letter-spacing: 0.2px;
   color: #6d6e71;
@@ -128,7 +128,7 @@
 .reset-btn {
   font-family: var(--heading-font-family);
   font-weight: bold;
-  font-size: 0.9375vw;
+  font-size: var(--body-text);
   line-height: 1.2;
   letter-spacing: 0.2px;
   padding: 1.2vh;
@@ -160,7 +160,7 @@
   padding-left: 1.2vw;
   margin-bottom: 0.5vh;
   cursor: pointer;
-  font-size: 0.73vw;
+  font-size: var(--link-text);
   letter-spacing: 0.3px;
   font-weight: 500;
   color: #b5b5b5;
@@ -301,7 +301,7 @@ margin-top: 4vh;
   border-radius: 19px;
   color: white;
   font-family: var(--body-font-family);
-  width: 58vw;
+  width: max(58vw, 450px);
   padding: 4vh 4.2vw;
   margin: auto;
   text-align: left;
@@ -340,30 +340,31 @@ margin-top: 4vh;
 .company-info > h2,
 .request-info> h2{
   margin-top: 1vh;
-  font-size: 1.875vw;
+  font-size: var(--big-text);
   font-weight: 400;
 }
 
 .request-title{
   font-weight: bold;
-font-size: 2.5vw;
+font-size: var(--h2-font-size);
 margin-bottom: 1vh;
 }
 
 .request-article{
   font-weight: 400;
-font-size: 0.9375vw;
+font-size: var(--body-text);
 text-align: justify;
 }
 
 .request-question{
-  font-size: 1.25vw;
+  font-size: var(--big-text);
   text-align: right;
 }
 
 .action-btn{
   font-weight: bold;
-font-size: 0.9375vw;
+font-size: var(--body-text);
+color: #FFFFFF;
 text-align: center;
 padding: 1.67vh 5.2vw;
 margin-left: 1.5vw;
@@ -432,6 +433,33 @@ color: #FFFFFF;
 
 .admin-maps-intro { 
   margin-bottom: 4vh;
+}
+
+#requestModal .modal-content { 
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+  border-radius: 0;
+}
+
+.company-info{
+  align-self: flex-start;
+  margin-bottom: 3vh;
+}
+
+.request-header{
+  flex-direction: column;
+}
+
+.request-article{
+  font-size: var(--link-text);
+  max-height: 33vh;
+  overflow-y: scroll;
+  margin-bottom: 2vh;
+}
+
+.request-question{
+  font-size: var(--body-text);
 }
 
 }
