--- a/assets/css/privacy-policy.css
+++ b/assets/css/privacy-policy.css
@@ -1,20 +1,20 @@
 @import url("./style.css");
 
-.privacy-main {
+.privacy-content {
   padding: 12vh 12.76vw 12vh;
 }
 
 .privacy-title {
   font-family: var(--heading-font-family);
   font-weight: bold;
-  font-size: 2.969vw;
+  font-size: var(--h2-font-size);
   line-height: 1.22;
   margin-bottom: 8vh;
 }
 
 .privacy-article {
   font-family: var(--body-font-family);
-  font-size: 1.25vw;
+  font-size: var(--big-text);
   line-height: 1.167;
   text-align: justify;
   color: #767676;
@@ -59,9 +59,23 @@
 
 .privacy-footer h6{
   font-family: var(--body-font-family);
-  font-size: 1.25vw;
+  font-size: var(--big-text);
   line-height: 1.167;
   color: #7D7D7D;
   margin-bottom: 2.6vh;
+}
+
+@media (max-width: 767.98px) { 
+  .privacy-content {
+    padding: 7vh 7vw 
+  }
+  .privacy-article{
+    font-size: var(--body-text);
+  }
+
+  
+.privacy-footer{
+  display: none;
+}
 }
 
