--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ input[type="submit"] {
     min-width: 140px;
   }
 
-  .navbar-collapse.show{
+  .navbar-collapse{
     top: 100px;
     left: 50%;
     position: absolute;
@@ -279,6 +279,18 @@ input[type="submit"] {
     transform: translate(-50%, 0%);
     color: #ffffff;
     width: 90%;
+  transform: translateX(-50%);
+  transform: rotateX(-90deg) translateX(-50%);
+  transform-origin: top center;
+  opacity: 0.3;
+  transition: all 1.2s ease-out;
+  }
+
+  .navbar-collapse.show{
+    opacity: 1;
+    transform: rotateX(0) translateX(-50%);
+    visibility: visible;
+    transition: all 1.2s ease-out;
   }
 
   .nav-items {
