--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,21 +276,18 @@ input[type="submit"] {
     left: 50%;
     position: absolute;
     margin: 0 auto;
-    transform: translate(-50%, 0%);
     color: #ffffff;
     width: 90%;
-  transform: translateX(-50%);
-  transform: rotateX(-90deg) translateX(-50%);
+  transform: rotateX(-90deg) translate(-50%, 0%) translateX(-50%);
   transform-origin: top center;
-  opacity: 0.3;
-  transition: all 1.2s ease-out;
+  visibility: hidden;
   }
 
   .navbar-collapse.show{
     opacity: 1;
     transform: rotateX(0) translateX(-50%);
     visibility: visible;
-    transition: all 1.2s ease-out;
+    transition: all 1.2s linear;
   }
 
   .nav-items {
@@ -331,7 +328,15 @@ input[type="text"], input[type="password"], input[type="tel"], textarea, select 
 .form-row > .form-group:last-of-type {
   margin-left: unset;
 }
-
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(0,0,0, 0.7);
+  display: none;
+}
 
 }
 
