--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ label {
 input[type="text"],
 input[type="password"],
 input[type="tel"],
+input[type="number"],
 textarea,
 select {
   margin-top: 2.31vh;
