--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,8 @@ select {
   margin-top: 2.31vh;
   width: 100%;
   height: 7.5vh;
+  min-height: 40px;
+  max-height: 77px;
   border: 2px solid #c4c4c4;
   border-radius: 13px;
   font: 400 var(--big-text) var(--heading-font-family);
@@ -201,12 +203,22 @@ textarea:focus {
   outline: none;
 }
 
+input:disabled,
+select:disabled,
+textarea:disabled{
+  background-color: #c4c4c4 ;
+  opacity: 1
+}
+
+
+
+
 select {
   appearance: none;
   background-image: url(../img/svg/select-arrow.svg);
   background-position: 95% 55%;
   background-repeat: no-repeat;
-  background-size: 5%;
+  background-size: max(5%,10px);
   white-space: nowrap;
   text-overflow: ellipsis;
 }
