fix checkgroup checkboxes

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -151,14 +151,14 @@
   align-items: center;
   border: 1px solid #9c9c9c;
   border-radius: 14px;
-  padding: 0.677vw;
+  padding: max(0.677vw,8px);
   margin-bottom: 2.5vh;
 }
 .control {
   font-family: var(--body-font-family);
   display: block;
   position: relative;
-  padding-left: 1.2vw;
+  padding-left: max(1.2vw,15px);
   margin-bottom: 0.5vh;
   cursor: pointer;
   font-size: var(--link-text);
@@ -180,6 +180,8 @@
   left: 0;
   height: 0.77vw;
   width: 0.77vw;
+  min-height: 10px;
+  min-width: 10px;
   background: transparent;
   border: 1px solid #c4c4c4;
 }
@@ -387,11 +389,19 @@ margin-left: 1.5vw;
     width: max(1vw,7px);
     height: max(1.7vh,10px);
   }
+  .control--checkbox .control__indicator:after {
+    left: 25%;
+    top: -20%;
+    width: max(0.3vw,5px);
+    height: max(0.3vw,8px);
+  }
+
  }
 
 
 
 @media (max-width: 767.98px) {   
+
 
   .admin .home-info{
     top:80px;
