--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -29,8 +29,15 @@ font-size: var(--h1-font-size);
 line-height: 1.1754;
 text-align: right;
 padding-left: 2.4vw;
-margin: 0 0 6vh 0;
+margin: 0 0 3vh 0;
 }
+
+.home-info-text{
+    font-size: var(--body-text);
+    line-height: 1.167;
+    text-align: justify;
+    margin: 0 0 3vh 0;
+    }
 
 .home-info-links {
     display: flex;
